# teamtask-server

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: deps.py
api/routes/: auth.py  project.py  task.py
core/: security.py  settings.py
db/: base.py  models.py  session.py
schemas/: project.py  task.py  tasklog.py  user.py
teamtask-server/: __main__.py  settings.py
teamtask-server/db/: models.py  session.py
teamtask-server/schemas/: task.py  user.py
